--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -22,8 +22,9 @@ jobs:
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
-          outputs: dist/snake.svg?palette=github&color_snake=blue
-
+          outputs: |
+            dist/snake.svg?palette=github&color_snake=blue
+            dist/snake-dark.svg?palette=github-dark&color_snake=blue
 
       - name: push snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
