--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -25,6 +25,12 @@ jobs:
           outputs: |
             dist/snake.svg?palette=github&color_snake=blue
             dist/snake-dark.svg?palette=github-dark&color_snake=blue
+            
+      - name: make sure the files were generated
+        run: |
+          ls dist
+          test -f dist/snake.svg
+          test -f dist/snake-dark.svg
 
       - name: push snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
