--- a/.github/workflows/prefetch_assets.yml
+++ b/.github/workflows/prefetch_assets.yml
@@ -2,7 +2,7 @@ name: Fetch and publish profile stats graphs and snake animation
 
 on: 
   schedule: 
-    - cron: "0 0 * * 0"
+    - cron: "0 0 * * *"
 
   workflow_dispatch: 
 
